--- a/config.env
+++ b/config.env
@@ -3,25 +3,25 @@ BOT_TOKEN = "5847774041:AAFNhqWrHFGe81GjYrxodH1CwAc7RsXQ3jM"
 GDRIVE_ID = "1WVR9ZqJVV24tUcuW4c3e4uhmx8dqK0jZ"
 OWNER_ID = 2081111916
 DOWNLOAD_DIR = "downloads/"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = 1
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = -1
 IS_TEAM_DRIVE = "True"
 TELEGRAM_API = 2076846
 TELEGRAM_HASH = "a7c38b63155953f8c529718a3ac0003a"
-AUTHORIZED_CHATS = "1826754085"
+AUTHORIZED_CHATS = "-1001880040444 -1001789075626 -1001782197816 -1001625042415"
 # OPTIONAL CONFIG
 CHANNEL_ID = ""  # Integer ID only
 DATABASE_URL = ""
-SUDO_USERS = "1826754085"
+SUDO_USERS = "1826754085 1232022097"
 IGNORE_PENDING_REQUESTS = "False"
 # required only if you have purchased Telegram Premium
 USER_SESSION_STRING = ""
 # Read notes section in readme to setup service accounts
-USE_SERVICE_ACCOUNTS = "False"
+USE_SERVICE_ACCOUNTS = "True"
 INDEX_URL = "https://movies.masudrana132222.workers.dev/0:/"
 STATUS_LIMIT = "4"
 STOP_DUPLICATE = "True"
-CMD_INDEX = ""
+CMD_INDEX = "x"
 EXTENTION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 # Leech
@@ -30,8 +30,8 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # Pivate Files
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
+ACCOUNTS_ZIP_URL = "https://movies.masudrana132222.workers.dev/0:/accounts.zip"
+TOKEN_PICKLE_URL = "https://movies.masudrana132222.workers.dev/0:/token.pickle"
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
@@ -42,24 +42,24 @@ SHORTENER_API = ""
 XSRF_TOKEN = ""
 laravel_session = ""
 # APPDRIVE,GDFLIX,DRIVEAPP,DRIVEBIT,DRIVELINKS,DRIVESHARER,DRIVEACE ETC COMMON LOGIN CREDENTIALS
-UNIFIED_EMAIL = ""
-UNIFIED_PASS = ""
+UNIFIED_EMAIL = "sobeipera@gmail.com"
+UNIFIED_PASS = "nomanmasudsano"
 # GDTOT
-GDTOT_CRYPT = "WTJIdUNYUVk5UVBOTkNRVDVJWWc1MHFtcWwvUlZvNGdYOXB4SWVoL1FkZz0%3D"
+GDTOT_CRYPT = "bE1CWnkvUFdKNE5OZ1l2TlYzTUJkTjFMRUg2cVZqKzljL1VJZFNVMmNmVT0%3D"
 # HUBDRIVE
-HUBDRIVE_CRYPT = ""
+HUBDRIVE_CRYPT = "NjVKNWFoaGg2UnpDRXdNRDlYcC9LRURjc0dUd3RRQ2tEbVJCUjZWT0trMD0%3D"
 # (KATDRIVE + KOLOP + DRIVEHUB)
-KATDRIVE_CRYPT = ""
+KATDRIVE_CRYPT = "Y1g4WWVKaFU5dnBQTTNXdno5dHJKL0hES2ZNNmYraWFCY3B0eHJhYjhVbz0%3D"
 # DRIVEFIRE
 DRIVEFIRE_CRYPT = ""
 # SHAREDRIVE
 SHAREDRIVE_PHPCKS = ""
 # Size Limits
 ZIP_UNZIP_LIMIT = ""
-CLONE_LIMIT = ""
+CLONE_LIMIT = "300"
 STORAGE_THRESHOLD = ""
 # Buttons
-VIEW_LINK = "False"
+VIEW_LINK = "True"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
